--- a/force-app/main/default/lwc/sessionDetail/sessionDetail.css
+++ b/force-app/main/default/lwc/sessionDetail/sessionDetail.css
@@ -43,6 +43,38 @@ table.pendingSessionTable {
 .signOutDiv{
     float: right;
 }
+.individualInput .slds-form-element__control{
+    background-color: var(--slds-g-color-neutral-base-95, var(--lwc-colorBackgroundInputDisabled, rgb(243, 243, 243)));
+    height: 32px;
+    color: #49445C !important;
+    border: 1px solid #49445C !important;
+    border-radius: 5px;
+    align-items: center;
+    display: flex;
+    padding-left: 0px;
+    text-align: center;
+    display: grid;
+    line-height: 12px;
+}
+.childStatusAccordion{
+    margin-left: 45px;
+}
+.slds-accordion__content lightning-layout.slds-grid.slds-wrap {
+    margin-left: 25px;
+}
+.studentSessionLayout lightning-layout-item.slds-p-around_small.slds-size_1-of-12 {
+    width: 12.5%;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+.parentSessionLayout lightning-layout-item.slds-p-around_small.slds-size_1-of-12{
+    width: 11.11%;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+.parentSessionStatusBtn lightning-button{
+    margin-left: 45px;
+}
 @media (max-width: 767px) {
     div.sessionAccordion{
         margin: 0px 0px;
