--- a/force-app/main/default/lwc/sessionFormInstruction/sessionFormInstruction.css
+++ b/force-app/main/default/lwc/sessionFormInstruction/sessionFormInstruction.css
@@ -18,13 +18,13 @@
     position: relative;
     padding-left: 0.7rem;
     line-height: 1.3;
-	color: #49445C;
+	color: #878787 ;
 	padding: 2px;
 }
 
 .instruction-list li:before {
     content: "•";
-    color: #49445C;
+    color: #878787 ;
     /* font-weight: bold; */
 	font-size: 0.6rem;
     position: absolute;
@@ -53,7 +53,7 @@ padding-left: 40px;
     margin-right: 1rem;
 }
 .status-button2 {
-	--slds-c-button-brand-color-background: #E88776 !important;
+	--slds-c-button-brand-color-background: #E88775 !important;
 	--sds-c-button-brand-color-border: #0e0e0d5c;
 	--slds-c-button-brand-text-color:  #000000;
     min-width: 120px;
@@ -74,7 +74,7 @@ padding-left: 40px;
     margin-right: 1rem;
 }
 .status-button5 {
-	--slds-c-button-brand-color-background: #EEDA5F !important;
+	--slds-c-button-brand-color-background: #EEDA5E !important;
 	--sds-c-button-brand-color-border: #0e0e0d5c;
 	--slds-c-button-brand-text-color:  #000000;
     min-width: 120px;
@@ -94,7 +94,7 @@ padding-left: 40px;
 }
 .status-description {
     width: 70%;
-    padding-top: 8px;
+    /* padding-top: 8px; */
 }
 .status-item {
     display: flex;
