--- a/force-app/main/default/lwc/sessionDetail/sessionDetail.css
+++ b/force-app/main/default/lwc/sessionDetail/sessionDetail.css
@@ -2,26 +2,42 @@
     top: 0px;
     right: 2px;
 }
-.pendingSessionModal .slds-modal__header{
-	border: none;
+
+.pendingSessionModal .slds-modal__header {
+    border: none;
 }
-.pendingSessionModal svg.slds-icon.slds-icon_small{
-	fill: black;
+
+.pendingSessionModal svg.slds-icon.slds-icon_small {
+    fill: black;
     width: 20px;
 }
+
+.session-info {
+    --lwc-heightInput: 1.5rem;
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 8px;
+    margin-top: 15px;
+
+}
+
 table.pendingSessionTable {
     border-collapse: collapse;
     width: 100%;
     color: #49445C;
 }
-.pendingSessionTable th, td {
+
+.pendingSessionTable th,
+td {
     border: 1px solid black;
     padding: 8px;
     text-align: left;
 }
-.closeIcon{
+
+.closeIcon {
     --sds-c-icon-color-foreground: #49445C;
 }
+
 .sessionFields {
     display: flex;
     justify-content: space-between;
@@ -29,21 +45,26 @@ table.pendingSessionTable {
     width: 100%;
     padding: 30px;
 }
-.sessionFields div{
+
+.sessionFields div {
     width: 33.33%;
 }
-.sessionDetail{
+
+.sessionDetail {
     background-color: #fff;
     margin: 20px;
     padding: 15px;
 }
-.signOutDiv .signOutButton{
-    --sds-c-button-brand-color-background : #DB583F;
+
+.signOutDiv .signOutButton {
+    --sds-c-button-brand-color-background: #DB583F;
 }
-.signOutDiv{
+
+.signOutDiv {
     float: right;
 }
-.individualInput .slds-form-element__control{
+
+.individualInput .slds-form-element__control {
     background-color: var(--slds-g-color-neutral-base-95, var(--lwc-colorBackgroundInputDisabled, rgb(243, 243, 243)));
     height: 32px;
     color: #49445C !important;
@@ -56,79 +77,296 @@ table.pendingSessionTable {
     display: grid;
     line-height: 12px;
 }
-.childStatusAccordion{
+
+.childStatusAccordion {
     margin-left: 45px;
+    margin-bottom: 15px;
 }
+
+.parentSessionStatusBtn {
+    margin-bottom: 15px;
+}
+
 .slds-accordion__content lightning-layout.slds-grid.slds-wrap {
     margin-left: 25px;
 }
+
 .studentSessionLayout lightning-layout-item.slds-p-around_small.slds-size_1-of-12 {
     width: 12.5%;
     padding-right: 5px;
     padding-left: 5px;
 }
-.parentSessionLayout lightning-layout-item.slds-p-around_small.slds-size_1-of-12{
+
+.parentSessionLayout lightning-layout-item.slds-p-around_small.slds-size_1-of-12 {
     width: 11.11%;
     padding-right: 5px;
     padding-left: 5px;
 }
-.parentSessionStatusBtn lightning-button{
+
+.parentSessionStatusBtn lightning-button {
     margin-left: 45px;
+    pointer-events: none;
 }
+
+.childStatusAccordion lightning-button {
+    pointer-events: none;
+}
+
 @media (max-width: 767px) {
-    div.sessionAccordion{
+    div.session-infoMob {
+        display: block;
+        margin-top: 0px !important;
+    }
+
+    .session-info {
+        margin-top: 20px !important;
+    }
+
+    div.sessionAccordion {
         margin: 0px 0px;
         padding: 20px 10px;
     }
+
     .sessionFields div {
         width: 100%;
     }
-    .sessionFields{
+
+    .sessionFields {
         display: block;
         padding: 60px 20px 60px 20px;
     }
-    .sessionDetail{
+
+    div.sessionDetail {
+        margin: 4px;
         padding: 0px;
     }
-    div.sessionFormInstruction{
+
+    div.sessionFormInstruction {
         padding: 0px 20px 0px 20px;
     }
+
     .signOutDiv {
         float: right;
         margin-top: 10px;
         margin-right: 10px;
     }
+
+    .childAccordion lightning-layout-item.slds-p-around_small.slds-size_2-of-12 {
+        width: 50%;
+    }
+
+    .parentSessionLayout lightning-layout-item.slds-p-around_small.slds-size_1-of-12,
+    .studentSessionLayout lightning-layout-item.slds-p-around_small.slds-size_1-of-12 {
+        width: 50% !important;
+    }
+
+    div.lateScheduleDiv,
+    div.onTimeScheduleDiv,
+    div.rescheduleInnerDiv {
+        margin-left: 4px;
+    }
+
+    .imgCls {
+        margin-left: -8px;
+    }
+
+    div.textCls {
+        font-size: 12px;
+    }
+
+    div.reScheduleDiv {
+        padding: 5px 28px 5px 10px;
+    }
+
+    div.lateScheduleDiv {
+        padding: 5px 25px 5px 10px;
+    }
+
+    div.onTimeScheduleDiv {
+        padding: 5px 25px 5px 10px;
+    }
+    .mobile-time-input input[type="time"] {
+        appearance: none;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        padding: 0.5rem;
+    }
+
 }
-.spinnerClass{
-     --lwc-brandPrimary: #50A771;
+
+@media (max-width: 385px) {
+    div.classAtten {
+        padding-top: 20px;
+    }
 }
-.sessionFormInstruction{
+
+.buttonsOnAcc {
+    display: flex;
+}
+
+.spinnerClass {
+    --lwc-brandPrimary: #50A771;
+}
+
+.sessionFormInstruction {
     padding: 0px 30px 0px 30px;
 }
+
 .sessionAccordion {
     border-top: 6px solid #E6E6E6;
     margin: 0px -15px;
     padding: 20px 30px;
     border-bottom: 6px solid #E6E6E6;
 }
-.completeButton{
+
+.completeButton {
     margin-left: 3%;
     --slds-c-button-brand-color-background: #92DB72 !important;
     --sds-c-button-brand-color-border: #0e0e0d5c;
     --slds-c-button-brand-text-color: #000000;
 }
-.incompleteButton{
+
+.incompleteButton {
     margin-left: 3%;
     --slds-c-button-brand-color-background: #E88776 !important;
-	--sds-c-button-brand-color-border: #0e0e0d5c;
-	--slds-c-button-brand-text-color:  #000000;
+    --sds-c-button-brand-color-border: #0e0e0d5c;
+    --slds-c-button-brand-text-color: #000000;
 }
-.saveButton{
+
+.saveButton {
     --slds-c-button-brand-color-background: #50A771 !important;
-	--sds-c-button-brand-color-border: #0e0e0d5c;
-	--slds-c-button-brand-text-color:  #fff;
+    --sds-c-button-brand-color-border: #0e0e0d5c;
+    --slds-c-button-brand-text-color: #fff;
 }
-.saveDiv{
+
+.saveDiv {
     text-align: center;
-    margin: 30px 0px;
+    margin: 50px 0px;
+}
+
+.onTimeScheduleDiv {
+    width: fit-content;
+    padding: 5px 20px 5px 10px;
+    background-color: #C2DCCC;
+    text-align: left;
+    align-items: center;
+    border-radius: 6px;
+    color: #50A771;
+    font-weight: 600;
+    display: flex;
+    margin-left: 12px;
+}
+
+.onTimeScheduleDiv img {
+    width: 25px;
+    margin-right: 3px;
+}
+
+.lateScheduleDiv {
+    width: fit-content;
+    padding: 5px 20px 5px 10px;
+    background-color: #F6DCC3;
+    text-align: left;
+    align-items: center;
+    border-radius: 6px;
+    color: #FF6B4D;
+    font-weight: 600;
+    display: flex;
+    margin-left: 12px;
+}
+
+.lateScheduleDiv img {
+    width: 25px;
+    margin-right: 3px;
+}
+
+.reScheduleDiv {
+    width: fit-content;
+    padding: 5px 20px 5px 10px;
+    background-color: #FAE58D;
+    text-align: left;
+    align-items: center;
+    border-radius: 6px;
+    color: #9B4A08;
+    font-weight: 600;
+    display: flex;
+    margin-left: 12px;
+}
+
+.reScheduleDiv img {
+    width: 25px;
+    margin-right: 3px;
+}
+
+.reScheduleDivCounter {
+    padding: 7px 10px 7px 10px;
+    background-color: #FAE58D;
+    text-align: left;
+    align-items: center;
+    border-radius: 6px;
+    color: #9B4A08;
+    font-weight: 600;
+    margin-left: 5px;
+}
+
+.rescheduleInnerDiv {
+    display: flex;
+    align-items: center;
+}
+
+.childAccordionMain:has(.childAccordion .slds-is-open) .childStatusAccordion {
+    display: none;
+}
+
+.facilitatorNameCls {
+    /* width: fit-content; */
+    padding: 5px 20px 5px 10px;
+    background-color: #F09F4D;
+    text-align: left;
+    align-items: center;
+    border: 1px solid #49445C;
+    border-radius: 0.25rem;
+    color: #49445C;
+    /* font-weight: 600; */
+    display: flex;
+
+}
+
+.lateSchedulePopup .headingText {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.lateSchedulePopup .btnGrp {
+    text-align: center;
+    margin-top: 40px;
+}
+
+.lateSchedulePopup .btnGrp button.slds-button.slds-button_brand {
+    width: 20%;
+}
+
+.lateScheduleDetails .sessName {
+    width: 27%;
+    align-items: center;
+    display: grid;
+    background-color: #E6E6E6;
+    margin: 0px;
+    padding: 0px;
+    height: 32px;
+    color: #49445C;
+    border-radius: 5px;
+    border: 1px solid #878787;
+    margin-right: 25px;
+    text-align: center;
+    margin-top: 18px;
+}
+
+.lateScheduleDetails {
+    display: flex;
+}
+
+.lateScheduleDetails lightning-combobox.slds-form-element {
+    width: 60%;
 }
