--- a/force-app/main/default/lwc/sessionDetail/sessionDetail.css
+++ b/force-app/main/default/lwc/sessionDetail/sessionDetail.css
@@ -54,6 +54,7 @@ td {
     background-color: #fff;
     margin: 20px;
     padding: 15px;
+    margin-top: 3%;
 }
 
 .signOutDiv .signOutButton {
@@ -353,14 +354,15 @@ td {
     display: grid;
     background-color: #E6E6E6;
     margin: 0px;
-    padding: 0px;
-    height: 32px;
+    padding: 5px;
+    height: auto;
     color: #49445C;
     border-radius: 5px;
     border: 1px solid #878787;
     margin-right: 25px;
     text-align: center;
     margin-top: 18px;
+    word-break: break-all;
 }
 
 .lateScheduleDetails {
