--- a/force-app/main/default/lwc/sesssionStudentAttendance/sesssionStudentAttendance.css
+++ b/force-app/main/default/lwc/sesssionStudentAttendance/sesssionStudentAttendance.css
@@ -12,6 +12,7 @@
     float: right;
     margin-left: auto;
     margin-right: 10px;
+        margin-top: 2%;
 }
 
 .contentCls {
@@ -37,6 +38,7 @@
     align-items: center;
     width: 15%;
 }
+
 @media only screen and (max-width: 767px){
     .attendance-table .row div {
         width: 50% !important;
